--- a/04_lists/04_lists.csproj
+++ b/04_lists/04_lists.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net10.0</TargetFramework>
-    <RootNamespace>_03_constructors</RootNamespace>
+    <TargetFramework>net9.0</TargetFramework>
+    <RootNamespace>_04_lists</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
