--- a/05_dictionaries/05_dictionaries.csproj
+++ b/05_dictionaries/05_dictionaries.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net10.0</TargetFramework>
-    <RootNamespace>_03_constructors</RootNamespace>
+    <RootNamespace>_05_dictionaries</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
